--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,10 @@ wyoming==1.6.0
 # HTTP client
 aiohttp==3.9.1
 
+# Configuration validation
+validators==0.34.0
+pydantic==2.10.4
+
 # Logging
 structlog==24.1.0
 loguru==0.7.2
