Remove obsolete files and update configuration for OpenSIPS AI Voice Connector
- Deleted unused source files related to the AI pipeline and RTP processing to streamline the codebase.
- Updated `docker-compose.dev.yml` to include a new RTP debug environment variable for enhanced development insights.
- Adjusted `opensips-ai-voice-connector.ini` to modify RTP port range and improve logging settings.
- Refined SIP call guide to reflect updated server configurations and testing instructions.
- Enhanced logging throughout the codebase for better traceability and debugging during voice call processing.

--- a/cfg/opensips.cfg
+++ b/cfg/opensips.cfg
@@ -107,9 +107,13 @@ route {
         exit;
     }
     
-    # Record route for dialog forming requests
+    # Record route for dialog forming requests with container IP
     if (is_method("INVITE|SUBSCRIBE")) {
-        record_route();
+        # Get container IP for Record-Route (fix 0.0.0.0 issue)
+        $var(my_ip) = $socket_in(ip);  # Dinamik IP detection!
+        xlog("L_INFO", "[$ci] 🔍 Auto-detected IP: $var(my_ip) for Record-Route\n");
+        record_route_preset("$var(my_ip):5060");  # NO sip: prefix - function adds it
+        xlog("L_INFO", "[$ci] 🎯 Record-Route set with auto-detected IP: $var(my_ip)\n");
     }
     
     # Handle retransmissions
@@ -157,7 +161,14 @@ route {
         
         # Handle in-dialog ACK
         if (is_method("ACK")) {
+            xlog("L_INFO", "[$ci] 🎯 Processing ACK message\n");
             if (loose_route()) {
+                xlog("L_INFO", "[$ci] ✅ ACK routed via loose_route\n");
+                t_relay();
+            } else {
+                # If loose_route fails, try to forward to OAVC directly
+                xlog("L_WARN", "[$ci] ⚠️ loose_route failed for ACK, trying direct routing\n");
+                $ru = "sip:" + $rU + "@opensips-ai-voice-connector:8089";
                 t_relay();
             }
             exit;
