--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -21,10 +21,10 @@ port = 8089
 
 [rtp]
 min_port = 35000
-max_port = 35003
+max_port = 35020
 bind_ip = 0.0.0.0
-# Docker network üzerinden otomatik çözümleme
-ip = 0.0.0.0
+# Docker network üzerinden otomatik çözümleme - boş bırak ki hostname resolution çalışsın
+# ip = auto-detect
 
 # AI Services Configuration - Docker container network
 [llm]
@@ -85,7 +85,7 @@ interruption_min_words = 2
 interruption_volume_threshold = 0.6
 
 [logging]
-level = INFO
+level = DEBUG
 format = structured
 
 [interruption]
