Fix RTP network configuration for Docker host access
- Set RTP IP to host network IP (192.168.88.120) for client accessibility
- Separate bind IP (0.0.0.0) from advertise IP in SDP response
- Add better RTP IP resolution logic with config precedence
- Fix container internal IP issue causing RTP packet loss

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -1,6 +1,7 @@
 [opensips]
 # Docker container configuration - MI Interface (Dynamic)
 # OpenSIPS service hostname kullanılır (Docker service discovery)
+mi_transport = datagram
 host = opensips
 ip = opensips
 port = 8087
@@ -23,8 +24,9 @@ port = 8089
 min_port = 35000
 max_port = 35020
 bind_ip = 0.0.0.0
-# Docker network üzerinden otomatik çözümleme - boş bırak ki hostname resolution çalışsın
-# ip = auto-detect
+# Docker host IP - client'ların erişebileceği IP  
+# Client IP: 192.168.88.1, so host likely in same subnet
+ip = 192.168.88.120
 
 # AI Services Configuration - Docker container network
 [llm]
@@ -92,4 +94,23 @@ format = structured
 enabled = true
 min_words_strategy = 2
 volume_threshold = 0.6
-volume_duration_ms = 300 
+volume_duration_ms = 300
+
+[VAD]
+# Voice Activity Detection settings
+enabled = true
+min_silence_ms = 500
+min_speech_ms = 250
+# 16-bit PCM'de 0.01'e denk gelir (32767 * 0.01)
+speech_threshold = 327.68 
+# Türkçe için optimize edilmiş parametreler
+turkish_optimized = true
+
+[RTP]
+# RTP port range for development
+min_port = 35000
+max_port = 35100
+# IP address to bind RTP listeners to (0.0.0.0 for all interfaces)
+bind_ip = 0.0.0.0
+# IP address to advertise in SDP (leave empty to use container IP)
+ip = 
