--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -112,5 +112,5 @@ min_port = 35000
 max_port = 35100
 # IP address to bind RTP listeners to (0.0.0.0 for all interfaces)
 bind_ip = 0.0.0.0
-# IP address to advertise in SDP (leave empty to use container IP)
-ip = 
+# IP address to advertise in SDP - client'ların erişebileceği IP
+ip = 192.168.88.120
