Add debug scripts for RTP flow and SIP testing
- Introduced `debug_pipeline_flow.py` for monitoring RTP to AI services, checking container logs, and testing service connectivity.
- Added `simple_sip_test.py` for sending SIP INVITE messages to the OpenSIPS container.
- Created `test_call_with_rtp.py` to initiate SIP calls and send RTP packets, including log monitoring for RTP activity.
- Implemented `test_direct_container.py` and `test_internal_container.py` for direct UDP message testing to container IPs.
- Added `test_udp_connectivity.py` for testing UDP connectivity to the OAVC container and validating port reachability.
- Updated `opensips-ai-voice-connector.ini` to set the host to `0.0.0.0` for better accessibility.
- Enhanced logging throughout the new scripts for improved traceability and debugging during testing operations.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -2,7 +2,7 @@
 # Docker container configuration - MI Interface (Dynamic)
 # OpenSIPS service hostname kullanılır (Docker service discovery)
 mi_transport = datagram
-host = opensips
+host = 0.0.0.0
 ip = opensips
 port = 8087
 
