Enhance OpenSIPS AI Voice Connector configuration and call handling
- Added a new section `[oavc]` in `opensips-ai-voice-connector.ini` to configure SIP listener settings, including host and port.
- Updated `opensips.cfg` to comment out the OAVC SIP interface socket for clarity.
- Refactored `main.py` to initialize and start the SIP listener, improving call handling and integration with the OpenSIPS engine.
- Enhanced logging throughout the call handling process for better traceability and debugging.
- Updated utility functions to improve user extraction from SIP headers and handle call parameters more effectively.

--- a/cfg/opensips.cfg
+++ b/cfg/opensips.cfg
@@ -16,7 +16,7 @@ socket=udp:0.0.0.0:5060   # Main SIP port
 socket=tcp:0.0.0.0:5060   # SIP over TCP  
 socket=udp:0.0.0.0:8080   # Additional SIP port
 # OAVC SIP Interface - accepts calls (dynamic - listens on all interfaces)
-socket=udp:0.0.0.0:8089
+# socket=udp:0.0.0.0:8089
 
 # SIP Protocol Enhancements
 auto_aliases=no
@@ -43,6 +43,7 @@ loadmodule "maxfwd.so"
 loadmodule "textops.so"
 
 loadmodule "mi_datagram.so"
+loadmodule "event_datagram.so"
 # loadmodule "b2b_entities.so"    # Not available in this image
 
 # Dialog and Statistics modules
@@ -86,7 +87,7 @@ modparam("dialog", "db_mode", 0)              # No database persistence
 modparam("maxfwd", "max_limit", 16)
 
 # Event Datagram Module - OAVC event notifications (commented out - module not available)
-# modparam("event_datagram", "address", "udp:0.0.0.0:8090")
+# modparam("event_datagram", "address", "udp:opensips-ai-voice-connector:8090")
 # modparam("event_datagram", "children_count", 2)
 
 ####### Custom Variables #########
