--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -6,6 +6,10 @@ host = 0.0.0.0
 ip = opensips
 port = 8087
 
+[oavc]
+host = 0.0.0.0
+sip_port = 8089
+
 [engine]
 # Bind on all interfaces for event subscriptions
 event_ip = 0.0.0.0
