Enhance RTP flow debugging and testing tools
- Refactored `debug_rtp_flow.py` to improve RTP flow debugging with enhanced logging and structured class-based design.
- Introduced `test_rtp_client.py` to simulate SIP client RTP behavior for testing and debugging purposes.
- Added `test_rtp_debug.py` for comprehensive RTP testing, including network connectivity checks and Wireshark usage instructions.
- Updated `docker-compose.yml` to define individual RTP port mappings for better compatibility and accessibility.
- Created `wireshark_guide.md` to provide detailed instructions for capturing and analyzing SIP and RTP traffic.
- Improved logging throughout the new scripts for better traceability and debugging during testing operations.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -29,8 +29,9 @@ min_port = 35000
 max_port = 35020
 bind_ip = 0.0.0.0
 # Docker host IP - client'ların erişebileceği IP  
-# Client IP: 192.168.88.1, so host likely in same subnet
-ip = 192.168.88.120
+# Client IP: 192.168.88.1, Docker host Wi-Fi IP: 192.168.1.120
+# Host Wi-Fi IP - client network'ünden erişilebilir
+ip = 192.168.1.120
 
 # AI Services Configuration - Docker container network
 [llm]
@@ -116,5 +117,5 @@ min_port = 35000
 max_port = 35100
 # IP address to bind RTP listeners to (0.0.0.0 for all interfaces)
 bind_ip = 0.0.0.0
-# IP address to advertise in SDP - client'ların erişebileceği IP
-ip = 192.168.88.120
+# IP address to advertise in SDP - host Wi-Fi IP for client accessibility
+ip = 192.168.1.120
