--- a/cfg/opensips.cfg
+++ b/cfg/opensips.cfg
@@ -110,11 +110,10 @@ route {
     
     # Record route for dialog forming requests with container IP
     if (is_method("INVITE|SUBSCRIBE")) {
-        # Get container IP for Record-Route (fix 0.0.0.0 issue)
-        $var(my_ip) = $socket_in(ip);  # Dinamik IP detection!
-        xlog("L_INFO", "[$ci] 🔍 Auto-detected IP: $var(my_ip) for Record-Route\n");
-        record_route_preset("$var(my_ip):5060");  # NO sip: prefix - function adds it
-        xlog("L_INFO", "[$ci] 🎯 Record-Route set with auto-detected IP: $var(my_ip)\n");
+        # Use Docker container IP for Record-Route (fix 0.0.0.0 issue)
+        # This allows subsequent requests to be routed correctly
+        record_route_preset("172.18.0.3:5060");
+        xlog("L_INFO", "[$ci] 🎯 Record-Route set with Docker container IP: 172.18.0.3\n");
     }
     
     # Handle retransmissions
@@ -141,7 +140,34 @@ route {
     
     # ============ Dialog Handling ============
     
-    # In-dialog requests
+    # CRITICAL FIX: Handle ACK messages BEFORE has_totag() check
+    # ACK messages can be both initial (for 200 OK) and in-dialog
+    if (is_method("ACK")) {
+        xlog("L_INFO", "[$ci] 🎯 Processing ACK message from $si:$sp\n");
+        
+        # Check if this is an in-dialog ACK (has to-tag)
+        if (has_totag()) {
+            xlog("L_INFO", "[$ci] 📞 In-dialog ACK processing\n");
+            if (loose_route()) {
+                xlog("L_INFO", "[$ci] ✅ ACK routed via loose_route\n");
+                t_relay();
+            } else {
+                xlog("L_WARN", "[$ci] ⚠️ loose_route failed for in-dialog ACK\n");
+                # Try direct routing to OAVC
+                $ru = "sip:" + $rU + "@opensips-ai-voice-connector:8089";
+                forward();
+            }
+        } else {
+            xlog("L_INFO", "[$ci] 📞 Initial ACK processing - routing to OAVC\n");
+            # Initial ACK for 200 OK response - route directly to OAVC
+            $ru = "sip:" + $rU + "@opensips-ai-voice-connector:8089";
+            # Use forward() for ACK (not t_relay as ACK is not transaction forming)
+            forward();
+        }
+        exit;
+    }
+    
+    # In-dialog requests (except ACK which is handled above)
     if (has_totag()) {
         
         # Handle in-dialog BYE and CANCEL  
@@ -160,21 +186,6 @@ route {
             }
         }
         
-        # Handle in-dialog ACK
-        if (is_method("ACK")) {
-            xlog("L_INFO", "[$ci] 🎯 Processing ACK message\n");
-            if (loose_route()) {
-                xlog("L_INFO", "[$ci] ✅ ACK routed via loose_route\n");
-                t_relay();
-            } else {
-                # If loose_route fails, try to forward to OAVC directly
-                xlog("L_WARN", "[$ci] ⚠️ loose_route failed for ACK, trying direct routing\n");
-                $ru = "sip:" + $rU + "@opensips-ai-voice-connector:8089";
-                t_relay();
-            }
-            exit;
-        }
-        
         # Other in-dialog requests
         if (loose_route()) {
             t_on_reply("1");
@@ -189,9 +200,9 @@ route {
     
     # ============ Initial INVITE Processing ============
     
-    # Only process initial INVITEs
+    # Only process initial INVITEs (ACK is handled above)
     if (!is_method("INVITE")) {
-        xlog("L_WARN", "[$ci] Unexpected initial request: $rm from $si:$sp\n");
+        xlog("L_WARN", "[$ci] Unexpected initial request: $rm from $si:$sp (ACK should be handled above)\n");
         sl_send_reply(405, "Method Not Allowed");
         exit;
     }
