VOSK Stage DONE

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ SIP_HOST=0.0.0.0
 SIP_PORT=8089
 
 # ===== System Configuration =====
-LOG_LEVEL=DEBUG
+LOG_LEVEL=INFO
 ENABLE_METRICS=true
 DEBUG_MODE=true
 
