Refactor OpenSIPS AI Voice Connector to implement unified configuration management and streamline service integration. Updated environment variables and Docker configurations for improved clarity and maintainability. Enhanced logging and error handling across components, including VAD and pipeline processing. Removed deprecated RTP utilities and optimized audio processing parameters for better performance.

--- a/.env
+++ b/.env
@@ -24,9 +24,9 @@ SIP_HOST=0.0.0.0
 SIP_PORT=8089
 
 # ===== System Configuration =====
-LOG_LEVEL=DEBUG
+LOG_LEVEL=INFO
 ENABLE_METRICS=true
-DEBUG_MODE=true
+DEBUG_MODE=false
 
 # ===== Conversation AI =====
 SYSTEM_MESSAGE=Sen yardimci bir AI asistanisin. Turkce konus ve kisa, net cevaplar ver. Sesli gorusmede oldugumu unutma.
