--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-# Core dependencies
-deepgram-sdk
-aiortc
-openai
+# Core OpenSIPS AI Voice Connector Requirements
+
+# gRPC and Protocol Buffers
+grpcio==1.60.0
+grpcio-tools==1.60.0
+protobuf==4.25.1
+
+# Core dependencies (legacy support)
 opensips==0.1.5
 sipmessage==0.5.0
 requests==2.32.3
@@ -18,28 +22,34 @@ silero-vad==5.1.2
 # ✅ Native Pipecat VAD dependencies
 onnxruntime==1.19.2 
 
-
-# HTTP client
+# HTTP client and server
 aiohttp==3.9.1
+fastapi==0.108.0
+uvicorn==0.27.0
 
 # Configuration validation
 validators==0.34.0
 pydantic==2.10.4
+pydantic-settings==2.1.0
 
 # Logging
 structlog==24.1.0
 loguru==0.7.2
 pyloudnorm==0.1.1
 
-# Audio resampling (with NumPy 2.x compatibility stub)
-# soxr==0.3.7  # Commented out due to NumPy 2.x compatibility issues
+# Configuration and utilities
+configparser==6.0.0
+aiofiles==23.2.1
 
 # Testing
 pytest==8.2.1
 pytest-asyncio==0.23.6
 
-# Additional dependencies for our services
+# Additional dependencies for services
 asyncio-mqtt==0.16.2
 python-multipart==0.0.9
-uvicorn==0.27.0
-fastapi==0.108.0
+
+# Service-specific dependencies (installed separately in each service)
+# vosk==0.3.45  # ASR service only
+# llama-cpp-python==0.2.20  # LLM service only  
+# piper-tts==1.2.0  # TTS service only
