--- a/services/tts-service/Dockerfile
+++ b/services/tts-service/Dockerfile
@@ -12,9 +12,9 @@ RUN apt-get update && apt-get install -y \
     libespeak-ng1 \
     && rm -rf /var/lib/apt/lists/*
 
-# Install grpc-health-probe for health checks
-RUN wget -qO/bin/grpc-health-probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/v0.4.19/grpc-health-probe-linux-amd64 && \
-    chmod +x /bin/grpc-health-probe
+# Install grpc-health-probe for health checks (optional for development)
+# RUN wget -qO/bin/grpc-health-probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/v0.4.19/grpc-health-probe-linux-amd64 && \
+#     chmod +x /bin/grpc-health-probe
 
 # Create app directory
 WORKDIR /app
@@ -22,9 +22,6 @@ WORKDIR /app
 # Copy requirements first for better caching
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy common services
-COPY ../common /app/common
 
 # Copy source code
 COPY src/ /app/src/
@@ -34,14 +31,14 @@ COPY proto/ /app/proto/
 RUN mkdir -p /app/model
 
 # Set Python path
-ENV PYTHONPATH=/app:/app/src:/app/common
+ENV PYTHONPATH=/app:/app/src
 
 # Expose gRPC port
 EXPOSE 50053
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD grpc-health-probe -addr=localhost:50053 -service=TTSService
+# Health check (commented for development)
+# HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+#     CMD grpc-health-probe -addr=localhost:50053 -service=TTSService
 
-# Run the service
-CMD ["python", "/app/src/enhanced_tts_server.py"]
+# Run the service (use gRPC server for production)
+CMD ["python", "/app/src/tts_grpc_server.py"]
