Add Intent Recognition Service and Database Utilities
- Introduced the Intent Recognition Service with gRPC implementation, including service definitions and health checks.
- Added database utilities for managing test scenarios and training data, including initialization and migration scripts.
- Updated Docker configurations for the new service, ensuring proper environment setup and health checks.
- Enhanced .gitignore to exclude database and test data files.
- Integrated the new service into the existing architecture, updating service registry and configuration settings.

This commit establishes a foundational service for intent recognition, paving the way for future enhancements in IVR automation and testing capabilities.

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,10 @@ test_*.py
 yolo_*.py
 .bmad-core
 .cursor
+
+# Database and test data files
+data/databases/*.db
+data/databases/*.db-journal
+data/test_results/
+data/training_data/*.json
+data/training_data/*.csv
