--- a/services/intent-service/Dockerfile
+++ b/services/intent-service/Dockerfile
@@ -1,20 +1,22 @@
-# Intent Recognition Service - CPU Optimized Dockerfile
-# Foundation for Turkish BERT intent classification
+# Turkish BERT Intent Recognition Service - Real AI Model Dockerfile
+# Turkish BERT model for IVR response classification
 
 FROM python:3.10-slim
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
-ENV INTENT_SERVICE_PORT=50054
-ENV INTENT_MODEL_PATH=/app/models
-ENV CUDA_VISIBLE_DEVICES=""
+ENV FLASK_ENV=production
+ENV FLASK_PORT=5000
+ENV FLASK_HOST=0.0.0.0
+ENV CONFIDENCE_THRESHOLD=0.7
+ENV MODEL_CACHE_DIR=/app/models/cache
 
-# Install system dependencies for CPU-optimized ML
+# Install system dependencies for ML packages
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
-    libgomp1 \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Create app directory
@@ -24,29 +26,29 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Create directories for models and data
-RUN mkdir -p /app/models /app/data /app/logs
+# Create directories for models, logs and data
+RUN mkdir -p /app/models/cache /app/logs /app/data
+
+# Copy training data
+COPY data/ ./data/
 
 # Copy service source code
 COPY src/ ./src/
-COPY proto/ ./proto/
-
-# Generate gRPC code if needed
-RUN python -m grpc_tools.protoc \
-    --python_out=./src \
-    --grpc_python_out=./src \
-    --proto_path=./proto \
-    intent_service.proto
 
 # Set proper permissions
 RUN chmod +x ./src/main.py
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import grpc; import sys; sys.path.append('./src'); import intent_service_pb2_grpc; import intent_service_pb2; channel = grpc.insecure_channel('localhost:50054'); stub = intent_service_pb2_grpc.IntentRecognitionStub(channel); stub.HealthCheck(intent_service_pb2.google_dot_protobuf_dot_empty__pb2.Empty(), timeout=5); print('OK')" || exit 1
+# Pre-download Turkish BERT model (optional - reduces startup time)
+# RUN python -c "from transformers import AutoTokenizer, AutoModelForSequenceClassification; \
+#     AutoTokenizer.from_pretrained('dbmdz/bert-base-turkish-uncased', cache_dir='/app/models/cache'); \
+#     AutoModelForSequenceClassification.from_pretrained('dbmdz/bert-base-turkish-uncased', cache_dir='/app/models/cache')"
+
+# Health check with longer startup period for model loading
+HEALTHCHECK --interval=30s --timeout=15s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
 
 # Expose service port
-EXPOSE 50054
+EXPOSE 5000
 
 # Start the service
-CMD ["python", "-m", "src.main"]
+CMD ["python", "src/main.py"]
