--- a/services/intent-service/requirements.txt
+++ b/services/intent-service/requirements.txt
@@ -1,28 +1,34 @@
-# Intent Recognition Service Requirements
-# CPU-optimized deployment for Turkish BERT
+# Turkish BERT Intent Recognition Service Requirements
+# Real Turkish BERT model for IVR response classification
 
-# Core gRPC dependencies
-grpcio>=1.60.0
-grpcio-tools>=1.60.0
+# Core Flask dependencies
+Flask>=2.3.0
+requests>=2.31.0
 
-# Machine Learning dependencies for Turkish BERT
-transformers>=4.30.0
-torch>=2.0.0
-onnxruntime>=1.15.0  # CPU-only inference
+# Turkish BERT and ML dependencies
+transformers>=4.35.0
+torch>=2.1.0
+tokenizers>=0.14.0
 numpy>=1.24.0
+scikit-learn>=1.3.0
+
+# CPU optimization
+onnxruntime>=1.16.0
+optimum>=1.14.0
 
 # Text processing
-tokenizers>=0.13.0
-
-# Async support
-asyncio
-
-# Development and testing
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
+unidecode>=1.3.0
 
 # Logging
 structlog>=23.0.0
+
+# Development and testing
+pytest>=7.0.0
+pytest-flask>=1.2.0
+
+# Configuration and data handling
+pyyaml>=6.0.0
+pandas>=2.0.0
 
 # Development hot-reload support
 watchdog>=3.0.0
