Add Complete System E2E Test and Web Interface for IVR Management
- Introduced a comprehensive end-to-end testing script for the IVR system, ensuring all services are integrated and operational.
- Added a web interface for managing IVR test scenarios, enhancing user interaction and monitoring capabilities.
- Updated Docker configurations to include the new web interface service, ensuring proper orchestration and accessibility.
- Implemented a health check mechanism for the web service to monitor its operational status.

This commit establishes a robust testing and management framework for the IVR Flow Automation System, facilitating effective deployment and operational readiness.

--- a/Dockerfile.core
+++ b/Dockerfile.core
@@ -19,6 +19,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy core application
 COPY core/ /app/core/
 COPY config/ /app/config/
+# Copy protobuf files from both locations to ensure availability
+COPY shared/proto_generated/*.py /app/core/grpc_clients/
+COPY core/grpc_clients/*.py /app/core/grpc_clients/
 
 # Create logs directory
 RUN mkdir -p /app/logs
