--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 # gRPC and Protocol Buffers
 grpcio==1.60.0
 grpcio-tools==1.60.0
-protobuf==4.25.1
+protobuf>=4.25.1,<5.0.0
 
 # Core dependencies (legacy support)
 opensips==0.1.5
